dependencies: updated to latest version of atlas-gonnect and applied required migrations (0.2.0)

--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
     "profiles": {
         "dev": {
-            "baseUrl": "https://your.ngrok.com",
+            "baseUrl": "https://lively.craftam.app",
             "port": 8080,
             "store": {
                 "type": "sqlite3",
                 "databaseUrl": "db.sqlite"
             },
+            "signedInstall": true,
             "validateDescriptor": true
         },
         "prod": {
